src/test/ui/traits/trait-impl-for-module.stderr
error[E0573]: expected type, found module `a`
  --> $DIR/trait-impl-for-module.rs:7:12
   |
LL | / trait A {
LL | | }
   | |_- similarly named trait `A` defined here
LL | 
LL |   impl A for a {
   |              ^ If I were you, I would simply a trait with a similar name exists: `A`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
